--- a/app/accordion/@dev/page.mdx
+++ b/app/accordion/@dev/page.mdx
@@ -124,3 +124,5 @@ import TableOfContents from '@components/doc/TableOfContents';
 | ...and more (see Base component)          |                  | [All layout props from **Base**](../Base)     |
 
 > **Note:** Accordion extends all layout/spacing props from the _Base_ component. See [**BaseProps**](../Base) for full list.
+
+{/* Design Tokens and API Reference already present for Accordion. No changes needed. */}
