--- a/app/password-input/@dev/page.mdx
+++ b/app/password-input/@dev/page.mdx
@@ -123,3 +123,34 @@ import TableOfContents from '@components/doc/TableOfContents';
 <CodePreview paths={['password-input', 'BasicPasswordInputWithLeftIconAlternativeFloatingLabel']} theme='alternative'>
   <Demo.BasicPasswordInputWithLeftIconAlternativeFloatingLabel />
 </CodePreview>
+
+---
+
+## Design Tokens for PasswordInput
+
+> _Note: PasswordInput uses the same design tokens as the Input component. See Input documentation for available tokens._
+
+---
+
+## PasswordInput API Reference
+
+### `<PasswordInput />`
+
+| **Prop**                   | **Type**                  | **Default** | **Description**                      |
+| -------------------------- | ------------------------- | ----------- | ------------------------------------ | -------------- |
+| **value**                  | string                    |             | Controlled value                     |
+| **onChange**               | function (event)          |             | Callback when value changes          |
+| **placeholder**            | string                    |             | Placeholder text                     |
+| **disabled**               | boolean                   | _false_     | Disable the input                    |
+| **readOnly**               | boolean                   | _false_     | Read-only input                      |
+| **error**                  | boolean                   | _false_     | Error state                          |
+| **size**                   | 'sm'                      | 'md'        | 'md'                                 | Input size     |
+| **floatingLabel**          | string                    | ReactNode   |                                      | Floating label |
+| **leftIcon**               | ReactNode                 |             | Icon on the left                     |
+| **clearButton**            | boolean                   | _false_     | Show clear button                    |
+| **toggleVisibilityButton** | boolean                   | _true_      | Show/hide password visibility button |
+| **...InputProps**          | [See Input](../BaseInput) |             | Inherits all props from **Input**    |
+
+> **_Note:_** _PasswordInput_ **inherits** all props from **Input** and the native **input[type=password]** element. See [Input documentation](../BaseInput) for full details on available props and tokens.\_
+
+---
