--- a/app/textarea/@dev/page.mdx
+++ b/app/textarea/@dev/page.mdx
@@ -59,3 +59,46 @@ import TableOfContents from '@components/doc/TableOfContents';
 <CodePreview paths={['textarea', 'BasicTextAreaAlternativeRows6MaxLength2000Clearable']} theme='alternative'>
   <Demo.BasicTextAreaAlternativeRows6MaxLength2000Clearable />
 </CodePreview>
+
+## Design Tokens for Textarea
+
+| **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**            |
+| ---------------------------------------- | ---------------------------- | ----------------- | ------------------------------ |
+| `--par-color-bg-field-enabled`           | Textarea background          | Enabled           | `.par-textarea:enabled`        |
+| `--par-color-bg-field-hovered`           | Textarea background          | Hovered           | `.par-textarea:hover`          |
+| `--par-color-bg-field-disabled`          | Textarea background          | Disabled          | `.par-textarea:disabled`       |
+| `--par-color-bg-field-readonly`          | Textarea background          | Readonly          | `.par-textarea[readonly]`      |
+| `--par-color-bg-field-invalid`           | Textarea background          | Invalid/Error     | `.par-textarea.error-state`    |
+| `--par-color-border-field-enabled`       | Textarea border              | Enabled           | `.par-textarea:enabled`        |
+| `--par-color-border-field-hovered`       | Textarea border              | Hovered           | `.par-textarea:hover`          |
+| `--par-color-border-field-disabled`      | Textarea border              | Disabled          | `.par-textarea:disabled`       |
+| `--par-color-border-field-invalid`       | Textarea border              | Invalid/Error     | `.par-textarea.error-state`    |
+| `--par-color-border-field-focused`       | Textarea border              | Focused           | `.par-textarea:focus`          |
+| `--par-color-text-field-placeholder`     | Placeholder text             | Any               | `.par-textarea::placeholder`   |
+| `--par-color-text-field-filled`          | Textarea text                | Filled            | `.par-textarea`                |
+| `--par-color-text-field-label`           | Label text                   | Any               | `.par-textarea-label`          |
+| `--par-color-text-field-disabled`        | Textarea text                | Disabled          | `.par-textarea:disabled`       |
+| `--par-color-text-field-readonly`        | Textarea text                | Readonly          | `.par-textarea[readonly]`      |
+| `--par-color-text-field-invalid`         | Textarea text                | Invalid/Error     | `.par-textarea.error-state`    |
+| `--par-color-icon-field-button-enabled`  | Icon color (button enabled)  | Enabled           | `.textarea-clear-btn:enabled`  |
+| `--par-color-icon-field-button-hovered`  | Icon color (button hovered)  | Hovered           | `.textarea-clear-btn:hover`    |
+| `--par-color-icon-field-button-pressed`  | Icon color (button pressed)  | Pressed           | `.textarea-clear-btn:active`   |
+| `--par-color-icon-field-button-disabled` | Icon color (button disabled) | Disabled          | `.textarea-clear-btn:disabled` |
+
+> _Note: Textarea uses the same design tokens as the Input component. See Input documentation for available tokens._
+
+---
+
+## Textarea API Reference
+
+### `<Textarea />`
+
+| **Prop**          | **Type**                  | **Default** | **Description**                   |
+| ----------------- | ------------------------- | ----------- | --------------------------------- |
+| **onChange**      | function (event)          |             | Callback when value changes       |
+| **value**         | string                    |             | Controlled value                  |
+| **placeholder**   | string                    |             | Placeholder text                  |
+| **rows**          | number                    |             | Number of visible text lines      |
+| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input** |
+
+> **_Note:_** _Textarea_ **inherits** all props from **Input** and the native **textarea** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
