doc: update doc for some components

--- a/app/accordion/@dev/page.mdx
+++ b/app/accordion/@dev/page.mdx
@@ -121,8 +121,8 @@ import TableOfContents from '@components/doc/TableOfContents';
 | **w, h, minW, minH, maxW, maxH**          | number \| string | Width/height/min/max                          |
 | **bg, cl, op**                            | string           | Background, color, opacity (CSS)              |
 | **bd, bdColor, bdWidth, bdStyle, radius** | string           | Border, border color, width, style, radius    |
-| ...and more (see Base component)          |                  | [All layout props from **Base**](../Base)     |
+| ...and more (see Base component)          |                  | All layout props from **Base**                |
 
-> **Note:** Accordion extends all layout/spacing props from the _Base_ component. See [**BaseProps**](../Base) for full list.
+> **Note:** Accordion extends all layout/spacing props from the _Base_ component. See **BaseProps** for full list.
 
 {/* Design Tokens and API Reference already present for Accordion. No changes needed. */}
