--- a/app/avatar/@spec/page.mdx
+++ b/app/avatar/@spec/page.mdx
@@ -208,6 +208,6 @@ For AvatarGroup:
 
 ## Changelog <span id="changelog"></span>
 
-| Date       | Type                                                     | Description                               | Author         | Associated issue(s) |
-| :--------- | :------------------------------------------------------- | :---------------------------------------- | :------------- | :------------------ |
-| 2025-05-13 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial specification of Avatar component | GitHub Copilot | PAR-52              |
+| Date       | Type                                                     | Description                               | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | :---------------------------------------- | :---------- | :------------------ |
+| 2025-05-13 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial specification of Avatar component | Oanh Nguyen | PAR-52              |
