--- a/app/breadcrumb/@dev/page.mdx
+++ b/app/breadcrumb/@dev/page.mdx
@@ -74,10 +74,10 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ### `<BreadcrumbItem />`
 
-| **Prop**               | **Type**                                           | **Default** | **Description**                                                                   |
-| ---------------------- | -------------------------------------------------- | ----------- | --------------------------------------------------------------------------------- |
-| **isMenuItem**         | boolean                                            | _false_     | Render as a menu item (for overflow).                                             |
-| **...InlineLinkProps** | [See InlineLink](../../inline-link/@spec/page.mdx) |             | All props from **InlineLink** (size, color, disabled, underline, iconOnly, etc.). |
+| **Prop**               | **Type**                            | **Default** | **Description**                                                                   |
+| ---------------------- | ----------------------------------- | ----------- | --------------------------------------------------------------------------------- |
+| **isMenuItem**         | boolean                             | _false_     | Render as a menu item (for overflow).                                             |
+| **...InlineLinkProps** | [See InlineLink](../../inline-link) |             | All props from **InlineLink** (size, color, disabled, underline, iconOnly, etc.). |
 
 ---
 
@@ -89,6 +89,6 @@ import TableOfContents from '@components/doc/TableOfContents';
 | **menuProps**      | Omit&lt;MenuProps, 'children'&gt; |             | Props for the menu (see Menu component).                 |
 | **...buttonProps** | HTMLButtonElement props           |             | All native button props (**className**, **style**, etc.) |
 
-> **Note:** _BreadcrumbItem_ **extends** all props from [**InlineLink**](../../inline-link/@spec/page.mdx). _Breadcrumb_ and _BreadcrumbMenu_ extend all native props from their respective HTML elements.
+> **Note:** _BreadcrumbItem_ **extends** all props from [**InlineLink**](../../inline-link). _Breadcrumb_ and _BreadcrumbMenu_ extend all native props from their respective HTML elements.
 
 ---
