--- a/app/pinfield/@spec/page.mdx
+++ b/app/pinfield/@spec/page.mdx
@@ -102,6 +102,6 @@ Custom separator characters can be specified for groups.
 
 ## Changelog <span id="changelog"></span>
 
-| Date       | Type                                                     | Description    | Author         | Associated issue(s) |
-| :--------- | :------------------------------------------------------- | -------------- | :------------- | :------------------ |
-| 2023-05-12 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | GitHub Copilot | -                   |
+| Date       | Type                                                     | Description    | Author      | Associated issue(s) |
+| :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
+| 2023-05-12 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | -                   |
